<resources>
    <string name="app_name">IZUM2020</string>
    <string name="button">Button</string>
    <string name="Degrees">%s°C</string>
    <string name="Day">Day</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">Nadaljujemo?</string>
    <string name="ok">DA</string>
    <string name="cancel">NE</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Nastavitve</string>
    <string name="action_share">Deli</string>
    <string name="action_exit">Izhod</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="today">Weather today</string>
    <string name="forecast">Weather forecast</string>
    <string name="press_me">klikni me</string>
    <string name="channel_name">Tečna obvestila</string>
    <string name="channel_description">Tukaj bodo tečna obvestila</string>
    <string name="novo_obvestilo">Novo obvestilo</string>
    <string name="sporocilo">Sem si prišel iz obvestila</string>
    <string name="snooze">Dremež</string>
    <string name="imeLabel">Ime</string>
    <string name="imeInput">Ime</string>
    <string name="priimekLabel">Priimek</string>
    <string name="priimekInput">Priimek</string>
    <string name="tezaLabel">Teža</string>
    <string name="tezaInput">Teža</string>
    <string name="visinaLabel">Višina</string>
    <string name="visinaInput">Višina</string>
    <string name="gumbDodaj">Shrani</string>
    <string name="message">Watch face tapped</string>
    <string name="my_analog_name">My Analog</string>
    <string name="preklici">Prekliči</string>
    <string name="odpriDialog">Odpri dialog</string>
    <string name="komunikacija_aktivnost_fragment">Komunikacija aktivnost fragment</string>
    <string name="constraint_layout">Constraint layout</string>
    <string name="custom_dialog">Custom dialog</string>
    <string name="simple_dialog">Simple dialog</string>
    <string name="simple_fragment">Simple fragment</string>
    <string name="gestures">Gestures</string>
    <string name="horizontal_vertical_layout">Horizontal/vertical layout</string>
    <string name="linear_layout">Linear layout</string>
    <string name="menu">Menu</string>
    <string name="motion_activity">Motion activity</string>
    <string name="notification_activity">Notification activity</string>
    <string name="recycler_view">Recycler View</string>
    <string name="view_pager">View pager</string>
</resources>
