<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_person_black_24dp" />

    <EditText
        android:id="@+id/dialogNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/imeInput"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialogLastnameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priimekInput"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/dialogWeightEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tezaInput"
        android:inputType="number" />

    <EditText
        android:id="@+id/dialogHeightEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/visinaInput"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBtn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/gumbDodaj" />

        <Button
            android:id="@+id/cancleBtn"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preklici" />
    </LinearLayout>

</LinearLayout>