<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Launcher">

    <Button
        android:id="@+id/communicationActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/komunikacija_aktivnost_fragment"
        app:layout_constraintBottom_toTopOf="@+id/constraintActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/constraintActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout"
        app:layout_constraintBottom_toTopOf="@+id/customDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/communicationActivity" />

    <Button
        android:id="@+id/customDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        app:layout_constraintBottom_toTopOf="@+id/simpleDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintActivity" />

    <Button
        android:id="@+id/simpleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_dialog"
        app:layout_constraintBottom_toTopOf="@+id/gestures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customDialog" />

    <Button
        android:id="@+id/gestures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gestures"
        app:layout_constraintBottom_toTopOf="@+id/horizontalVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleDialog" />

    <Button
        android:id="@+id/horizontalVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horizontal_vertical_layout"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestures" />

    <Button
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout"
        app:layout_constraintBottom_toTopOf="@+id/menuActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalVertical" />

    <Button
        android:id="@+id/menuActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/motionActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/motionActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motion_activity"
        app:layout_constraintBottom_toTopOf="@+id/notificationActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuActivity" />

    <Button
        android:id="@+id/notificationActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_activity"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motionActivity" />

    <Button
        android:id="@+id/recyclerViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view"
        app:layout_constraintBottom_toTopOf="@+id/viewPagerActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationActivity" />

    <Button
        android:id="@+id/viewPagerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_pager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>